[package]
name = "upyun-sdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hmac-sha1 = "0.2.2"
sha1 = "0.10.6"
hmac = "0.12.1"
rust-crypto = "0.2.36"
reqwest = { version = "0.11.23", features = ["json"] }
url-escape = "0.1.1"
serde = { version = "1.0.194", features = ["derive"] }
base64 = "0.21.5"
tokio = { version = "1.35.1", features = ["full"] }
chrono = "0.4.31"
chrono-tz = "0.8.5"
