[package]
name = "upyun-sdk"
version = "0.1.5"
edition = "2021"
authors = ["Liyan 721748889@qq.com"]
description = "Upyun sdk for rust."
license = "MIT"
documentation = "https://docs.rs/upyun-sdk"
homepage = "https://docs.rs/upyun-sdk"
repository = "https://github.com/hi-liyan/upyun-sdk"

[dependencies]
sha1 = "0.10.6"
hmac = "0.12.1"
rust-crypto = "0.2.36"
reqwest = { version = "0.12.3", features = ["json"] }
url-escape = "0.1.1"
serde = { version = "1.0.197", features = ["derive"] }
base64 = "0.22.0"
chrono = "0.4.38"
chrono-tz = "0.9.0"

[dev-dependencies]
tokio = { version = "1.35.1", features = ["full"] }
